[tool.poetry]
name = "open-unlearning"
version = "0.1.0"
description = "A library for machine unlearning in LLMs."
authors = ["Vineeth Dorna <vineethdornal@gmail.com>", "Anmol Reddy Mekala <m.anmolreddy@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "0.29.1"
transformers = "4.45.1"
numpy = "2.2.3"
hydra-core = "1.3"
hydra_colorlog = "1.2.0"
torch = "2.4.1"
datasets = "3.0.1"
accelerate = "0.34.2"
bitsandbytes = "0.44.1"
rouge-score = "0.1.2"
pre-commit = "4.0.1"
scipy = "1.14.1"
tensorboard = "2.18.0"
scikit-learn = "1.5.2"
deepspeed = "0.15.4"
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.4cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
pytest = "^8.3.5"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
